# transparent-fastapi

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/live/: CLAUDE.md  docker-compose.yml
deploy/live/configs/: prometheus.yml
deploy/live/configs/grafana/provisioning/dashboards/: dashboards.yml
deploy/live/scripts/: common.sh  config.sh  deploy.sh
deploy/local/: CLAUDE.md  docker-compose.yml  locustfile.py
deploy/local/configs/grafana/provisioning/dashboards/: transparent-fastapi.json
deploy/local/scripts/: config.sh  deploy.sh
deploy/source/: CLAUDE.md  docker-compose.yml  locustfile.py
deploy/source/configs/grafana/provisioning/dashboards/: transparent-fastapi.json
deploy/source/scripts/: deploy.sh
src/test_server/: CLAUDE.md  Dockerfile  app.py  pyproject.toml
src/transparent_fastapi/: CLAUDE.md  __init__.py  background_tasks.py  endpoint.py  event_loop.py  http.py  threadpool.py
tests/: test_smoke.py
