[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transparent-fastapi"
version = "0.1.1"
description = "Drop-in Prometheus metrics for FastAPI: HTTP requests, latency, event-loop lag, threadpool tokens, background tasks. One line of setup, no per-route changes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ashish Kumar Jha", email = "ashishk2004a@gmail.com" }]
keywords = [
  "fastapi",
  "prometheus",
  "metrics",
  "observability",
  "monitoring",
  "instrumentation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = ["fastapi>=0.75", "prometheus-client>=0.20"]

[project.urls]
Homepage = "https://github.com/Ashish-Github193/transparent-fastapi"
Source = "https://github.com/Ashish-Github193/transparent-fastapi"
Issues = "https://github.com/Ashish-Github193/transparent-fastapi/issues"
Changelog = "https://github.com/Ashish-Github193/transparent-fastapi/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "uvicorn[standard]>=0.32",
  "locust>=2.30",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transparent_fastapi"]
exclude = ["**/CLAUDE.md"]

[tool.hatch.build.targets.sdist]
exclude = [
  "**/CLAUDE.md",
  ".claude",
  ".github",
  ".mcp.json",
  ".python-version",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.workspace]
members = ["src/test_server"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/transparent_fastapi"]
